feat(UI):responsive users account and products admin pages

--- a/src/layout/components/orders/app-order-manual-sheet/app-order-manual-sheet.component.html
+++ b/src/layout/components/orders/app-order-manual-sheet/app-order-manual-sheet.component.html
@@ -11,6 +11,8 @@
         matInput
         [formControl]="searchControl"
         [matAutocomplete]="auto"
+        [readonly]="readonly"
+        (click)="readonly = false"
       />
       <button
         *ngIf="searchControl.value"
