--- a/src/layout/components/orders/orders/orders.component.html
+++ b/src/layout/components/orders/orders/orders.component.html
@@ -33,7 +33,7 @@
   </div>
 
   <!-- Orders List -->
-  <div class="overflow-y-scroll h-[54rem] md:h-[74rem] pr-1 pb-[22rem] lg:pb-[25rem]">
+  <div class="overflow-y-scroll h-[54rem] md:h-[63rem] pr-1 pb-[22rem]">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-6">
       <div *ngFor="let order of filteredOrders"
            class="bg-white border border-blue-200 rounded-xl p-0 shadow-sm hover:shadow-md
@@ -106,7 +106,7 @@
 
     <button
       class="flex flex-col items-center justify-center py-2 w-full"
-      (click)="selectMonth(); selectedTab = 'month'"
+      (click)="selectMonth()"
       [ngClass]="{ 'text-red-400': selectedTab === 'month' }">
       <i class="fas fa-filter text-xl"></i>
       <span class="text-sm mt-1">סינון חודשי</span>
