--- a/src/pages/admin/orders/admin-accounts/admin-accounts.component.css
+++ b/src/pages/admin/orders/admin-accounts/admin-accounts.component.css
@@ -9,6 +9,11 @@
 .mat-mdc-table {
   min-width: 40vw;
 }
+@media screen and (min-width: 1200px) {
+  .mat-mdc-table {
+    margin: auto;
+  }
+}
 .mat-column-name, .mat-column-category, .mat-column-price {
   text-align: left;
 }
@@ -92,4 +97,13 @@ footer {
   background-color: silver!important;
   color: black;
   font-weight: bold;
+}
+::ng-deep mat-expansion-panel-header {
+  background-color: #3f51b5 !important; /* Tailwind blue-500 */
+  color: white !important;
+}
+
+::ng-deep mat-expansion-panel-header.mat-expanded {
+  background-color: #3f51b5 !important; /* same for expanded state */
+  color: white !important;
 }
