--- a/src/pages/admin/orders/admin-products/admin-products.component.css
+++ b/src/pages/admin/orders/admin-products/admin-products.component.css
@@ -93,3 +93,18 @@ footer {
   color: black;
   font-weight: bold;
 }
+::ng-deep mat-expansion-panel-header {
+  background-color: #3f51b5 !important; /* Tailwind blue-500 */
+  color: white !important;
+}
+
+::ng-deep mat-expansion-panel-header.mat-expanded {
+  background-color: #3f51b5 !important; /* same for expanded state */
+  color: white !important;
+}
+
+::ng-deep svg{
+  font-size: 1rem;
+  font-weight: bold;
+  color: white !important;
+}
