--- a/src/pages/admin/orders/admin-users/admin-users.component.html
+++ b/src/pages/admin/orders/admin-users/admin-users.component.html
@@ -11,7 +11,7 @@
 
 <ng-template #table>
   <ng-container *ngIf="!isLoading">
-    <div class="table-container mt-5">
+    <div *ngIf="!isMobile" class="table-container mt-15 overflow-y-scroll overflow-x-hidden max-h-[72vh]">
       <table mat-table [dataSource]="users" class="mat-elevation-z8 w-full" matSort>
 
         <!-- Email Column -->
@@ -60,13 +60,35 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
       </table>
-
-
     </div>
   </ng-container>
+  <!-- Mobile Accordion -->
+  <div *ngIf="isMobile" class="overflow-y-scroll overflow-x-hidden w-[90vw] max-h-[72vh] mt-15 ">
+    <mat-accordion multi class="grid grid-flow-row gap-3"  dir="rtl">
+      <mat-expansion-panel *ngFor="let user of users.data">
+        <mat-expansion-panel-header>
+          <mat-panel-title >
+            <b class="text-white text-[1rem]">{{ user?.firstName }} {{ user?.lastName }}</b>
+          </mat-panel-title>
+          <mat-panel-description>
+            <b class="text-white text-[1rem]">חשבון: {{ user?.accountNumber }}</b>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
 
+        <div class="text-right p-5">
+          <p><strong>שם פרטי:</strong> {{ user?.firstName }}</p>
+          <p><strong>שם משפחה:</strong> {{ user?.lastName }}</p>
+          <p><strong>מספר חשבון:</strong> {{ user?.accountNumber }}</p>
+
+          <div class="mt-3 flex gap-2">
+            <button mat-raised-button color="primary" (click)="editUser(user)">עריכה</button>
+           <!-- <button mat-raised-button color="warn" (click)="deleteAccount(account)">מחיקה</button>-->
+          </div>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
 </ng-template>
 
 <app-fab-menu></app-fab-menu>
