--- a/src/shared/date-selector-sheet/date-selector-sheet.component.html
+++ b/src/shared/date-selector-sheet/date-selector-sheet.component.html
@@ -1,14 +1,16 @@
-
 <!-- Month Filter -->
-<h1 class="px-4 py-2  text-[2rem] text-end font-medium
-             row-start-3 col-start-1 w-full">סינון חודשי</h1>
+<div class="bg-gray-200 dark:bg-gray-900 rounded-2xl text-[1.3rem] p-4 rtl text-center  border-[gray]"  style="border-width: 3px;">
+  <h1 class="px-4 py-2  text-[2rem] text-end text-white font-medium row-start-3 col-start-1 w-full">סינון חודשי</h1>
 
-<input type="month"
-       class="border border-gray-300 rounded p-2 text-[1.2rem]
-              row-start-4 col-start-1 w-full"
-       [(ngModel)]="selectedDate"/>
+  <div class="relative w-full">
+    <input
+      type="month"
+      class="w-full border border-gray-300 rounded p-2 pr-10"
+      [(ngModel)]="selectedDate"/>
+  </div>
 
-<div class="grid grid-cols-2 gap-5 w-full mt-5">
-  <button mat-raised-button color="warn"   (click)="cancelOrder()">ביטול</button>
-  <button mat-raised-button color="primary" (click)="confirmOrder()">אישור</button>
+  <div class="grid grid-cols-2 gap-5 w-full mt-5">
+    <button mat-raised-button color="warn" (click)="cancelOrder()">ביטול</button>
+    <button mat-raised-button color="primary" (click)="confirmOrder()">אישור</button>
+  </div>
 </div>
